# Master_Thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/instructions/: thesis_instructions.instructions.md
scripts/: evaluate.py  run_depth_anything_baseline.py  run_nn_baseline.py
src/: __init__.py  data_loader.py  depth_utils.py  metrics.py
