[project]
name = "monocular-depth-estimation"
version = "0.1.0"
description = "Monocular Depth Estimation for Autonomous Vehicles – Master's thesis, University of Luxembourg / Ohmio SARL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pillow>=9.0",
    "scipy>=1.10",
    "opencv-python>=4.7",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.35",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.uv]
link-mode = "copy"
